tests/purs/failing/RecordLabelOnTypeErrorImmediate.out
Error found:
in module [33mNestedRecordLabelOnTypeError[0m
at tests/purs/failing/RecordLabelOnTypeErrorImmediate.purs:5:15 - 5:18 (line 5, column 15 - line 5, column 18)

  The type
  [33m        [0m
  [33m  String[0m
  [33m        [0m
  does not match the expected type
  [33m     [0m
  [33m  Int[0m
  [33m     [0m

while checking that expression [33m"a"[0m
  has type [33mInt[0m
while matching label [33ma[0m
in value declaration [33mrecord[0m

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

